# libclients

./: .gitignore  .gitmodules  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
m4/: ax_config_dir.m4
src/: clients.c  create-delete-ephemerals.c  create-ephemerals.c  create-idle-clients.c  create-multiple-ephemerals.c  get-children-with-watch.c  get-data-with-watch.c  libclients.pc.in  libclients.sym  poll-path.c
src/clients/: clients.h
